--- a/app/scss/pages/projects.scss
+++ b/app/scss/pages/projects.scss
@@ -265,6 +265,8 @@ body.projects {
         margin: auto;
         width: auto;
         height: auto;
+        max-width: none;
+        overflow: visible;
       }
 
       a.launch {
